# VOR

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: vor_pr.yml  vor_release.yml
data/packs/adversarial_v1/: PACK_LICENSE.txt  corpus.jsonl  gold.jsonl  manifest.json  questions.jsonl
data/packs/public_demo_v0_7_1/: README.md  WITNESS_INSTRUCTIONS.txt  corpus.jsonl  manifest.json  questions.jsonl
docs/: BENCHMARK_REPORT_TEMPLATE.md  DECISIONS.md  GO_NO_GO.md  H_DSL.md  IMPLEMENTATION_PLAN.md  KILLTESTS.md  NEXT.md  PUBLIC_VS_PRIVATE_SPLIT.md  RELEASE_v0_7_1.md  RELEASE_v0_7_2.md  TRACEABILITY_MATRIX.md  VOR.md  WHAT_WE_KNOW.md  WITNESS_RUN_MESSAGE.txt
docs/packs/: adversarial_v1.md
docs/pilots/: contracts.md  pilot_b_status.md  pilot_c_spec.md  pilot_d_spec.md  pilot_e_spec.md  pilot_e_status.md  pilot_f_status.md  pilot_g_spec.md  pilot_h_spec.md  v0_4_contract.md
neuralogix/: __init__.py
neuralogix/api/: server.py
neuralogix/cli/: main.py
neuralogix/config/: budgets.json
neuralogix/core/audit/: __init__.py  outcome_verifier.py  vor.py
neuralogix/core/checkers/: base.py  budget_checker.py  code_checker.py  consistency.py  integrity.py  type_checker.py
neuralogix/core/codec/: base.py  hdc.py  vq.py  vq_trainer.py
neuralogix/core/data/: generator.py
neuralogix/core/ir/: graph.py  schema.py
neuralogix/h_surface/: lint.py  parser.py  printer.py
tests/: test_ablation.py  test_adversarial_pack_v1.py  test_api_inline_json.py  test_budget_checker.py  test_checkers_consistency.py  test_checkers_type.py  test_codec_hdc.py  test_codec_vq.py  test_data_generator.py  test_h_surface.py  test_hdsl_roundtrip.py  test_ir_determinism.py  test_ir_examples.py  test_no_legacy_stubs.py  test_pack_integrity_guardrail.py  test_parser_internal.py  test_pilot_e.py  test_pilot_g.py  test_pilot_h.py  test_pilot_i.py  test_reasoning_operations.py  test_receipts_hashchain.py  test_receipts_replay_determinism.py  test_sabotage_canary_numeric_normalization.py  test_v0_4_core.py  test_v0_7_1_packaging.py  test_v0_7_x_regression.py  test_vor_canary.py  test_vq_training.py
(+36 files in other folders)
