[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralogix-core"
version = "0.7.3"
description = "Discrete, auditable cognition runtime with typed graph IR, checkers, and receipts"
authors = [
    { name = "Rob C (CULPRITCHAOS)" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pytest>=7.0",
    "numpy>=1.21",
    "torch>=2.0",
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.6",
]

[project.scripts]
neuralogix = "neuralogix.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
include = ["neuralogix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/legacy/"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
